--- a/workbench/pyproject.toml
+++ b/workbench/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
   "marisa-trie~=1.2.1",
   "bitarray~=3.0.0",
   "mmh3~=5.0.1",
+  "loguru~=0.7.3",
 ]
 name = "workbench"
 version = "0.1.0"
@@ -38,3 +39,8 @@ requires-python = ">=3.10"
 [dependency-groups]
 dev = ["taskipy>=1.10.3"]
 lint = ["ruff>=0.8.3"]
+
+
+[tool.mypy]
+python_version = "3.10"
+disable_error_code = ["assignment", "no-redef"]
